test/errors/future_barry_bang_equals.py
from __future__ import barry_as_FLUFL

print(1 != 2)
